--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-      julia.wellbe@gmail.com
-      <br>+38 066 355 08 70</br>
+        <a class="header-email" href="mailto:julia.wellbe@gmail.com">julia.wellbe@gmail.com</a>
+        <a class="header-phone" href="+30663550870">+38 066 355 08 70</a>
       </div>
     </header>
 
@@ -25,18 +25,37 @@
     <section class="intro">
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image">
+          <img src="files/user.jpg" width="928" height="536" alt="Фотография Кондратенко Юлии">
+        </figure>
       <h3>Пара слов о себе</h3>
       <p>На сегодняшний день студентка <b>HTMLAcademy</b>. Перпективный верстальщик и просто хороший человек)))</p>
       <h3>Чем могу быть полезна</h3>
       <p>Мечтаю сделать верстку вашему сайту.</p>
+        <div class="skills">
+          <h3>Мои навыки</h3>
+          <dl class="skills-list">
+            <dt class="skill-html">HTML</dt>
+            <dd class="level">
+              <div style="width: 60%;">60%</div>
+            </dd>
+            <dt class="skill-css">CSS</dt>
+            <dd class="level">
+              <div style="width: 40%;">40%</div>
+            </dd>
+          </dl>
+        </div>
       </div>
     </section>
 
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
-
+        <figure class="project-image">
+          <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+        </figure>
       <h3>Сайт инструктора Кекса</h3>
+        <a class="button" href="source/project/index.html">Открыть страницу</a>
       <p>Небольшой лендинг о школе для начинающих.</p>
 
       <h3>Блог начинающего верстальщика</h3>
@@ -46,8 +65,8 @@
 
     <footer class="page-footer">
       <div class="container">
-      julia.wellbe@gmail.com
-        <br>+38 066 355 08 70</br>
+        <a class="footer-email" href="mailto:julia.wellbe@gmail.com">julia.wellbe@gmail.com</a>
+        <a class="footer-phone" href=href="+30663550870">+38 066 355 08 70</a>
       </div>
     </footer>
   </body>
