--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
         <figure class="user-image">
-          <img src="files/user.jpg" width="928" height="536" alt="Фотография Кондратенко Юлии">
+          <img src="/files/user.jpg" width="928" height="536" alt="Фотография Кондратенко Юлии">
         </figure>
       <h3>Пара слов о себе</h3>
       <p>На сегодняшний день студентка <b>HTMLAcademy</b>. Перпективный верстальщик и просто хороший человек)))</p>
