Change to middle

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="hero-image">
       <div class="container">
       <h1 class="heading">Кондратенко Юлия</h1>
-      <p>Junior верстальщик</p>
+      <p>Middle верстальщик</p>
       </div>
     </section>
 
